--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <title>PicDrive</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-gray-50 w-full h-full overflow-hidden m-0 p-0"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
